# agent-study

./: .gitignore  agent_messages_demo.py  agent_messages_demo2.ipynb  agent_messages_demo2.py  agent_tool.py  dynamic_model_middleware.py  get_env_utils.py  get_weather.py  init_LLM.py  model_weather_tool_02.py  my_maessage.py  pyproject.toml  struct_output_demo_01.py  weather_client.py  weather_server.py
agent_code/: agent_inmemorysave.py  agent_long_sql_memorysave.py  agent_summarza.py  create_agent_01.py  factory.py  manage_message.py  middleware_02.py
