[project]
name = "agent-study"
version = "0.1.0"
description = "AI Agent 学习项目 - 天气助手"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
    "python-dotenv",
    "mcp>=1.28.1",
    "langchain-core>=1.4.8",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-tavily>=0.2.18",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "dotenv>=0.9.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
]
